# fdk-aac-encoder

./: README.md  build.gradle
src/main/: AndroidManifest.xml
src/main/java/com/flyscale/fdkaac/: AudioEncoder.java  MainActivity.java
src/main/jni/: AudioEncoder.cpp  CMakeLists.txt  audio_encoder.cpp  com_flyscale_fdkaac_AudioEncoder.h
